--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,13 @@
         android:id="@+id/mytitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
-        >
+        android:background="@color/colorAccent">
 
     </com.view.anymarvel.view.MyTitle>
+
+    <com.view.anymarvel.view.CounterView
+        android:id="@+id/counterView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/mytitle" />
 </RelativeLayout>
