--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.view.anymarvel.MainActivity">
 
-    <com.view.anymarvel.view.MyTitle
-        android:id="@+id/mytitle"
+    <com.view.anymarvel.view.RainbowBar
+        android:id="@+id/rainbow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:rainbowbar_color="@android:color/holo_blue_bright"
+        app:rainbowbar_hspace="80dp"
+        app:rainbowbar_vspace="10dp" />
+
+    <com.view.anymarvel.view.MyTitle
+        android:id="@+id/mytitle"
+        android:layout_below="@id/rainbow"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
         android:background="@color/colorAccent">
 
     </com.view.anymarvel.view.MyTitle>
@@ -24,6 +34,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/counterView">
-        
+
     </com.view.anymarvel.view.CustomListView>
 </RelativeLayout>
