增加自定义圆环动画

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,5 +19,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="rainbow_bar" />
+    <Button
+        android:id="@+id/progrecessbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="progrecessbar" />
+
 
 </LinearLayout>
